<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.pincette</groupId>
  <artifactId>pincette-mongo-streams</artifactId>
  <packaging>jar</packaging>
  <version>3.1.19</version>
  <name>pincette-mongo-streams</name>
  <description>MongoDB Utilities</description>
  <url>https://github.com/wdonne/pincette-mongo-streams</url>

  <organization>
    <name>Pincette</name>
    <url>https://pincette.net</url>
  </organization>

  <scm>
    <url>https://github.com/wdonne/pincette-mongo-streams</url>
    <connection>scm:git@github.com:wdonne/pincette-mongo-streams.git</connection>
    <developerConnection>scm:git@github.com:wdonne/pincette-mongo-streams.git</developerConnection>
  </scm>

  <developers>
    <developer>
      <id>wdonne</id>
      <name>Werner Donné</name>
      <email>werner.donne@pincette.net</email>
      <url>https://pincette.net</url>
      <organization>Pincette</organization>
      <organizationUrl>https://pincette.net</organizationUrl>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>BSD-style</name>
      <url>https://www.opensource.org/licenses/bsd-license.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.source>17</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>javax.json</groupId>
      <artifactId>javax.json-api</artifactId>
      <version>1.1.4</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-common</artifactId>
      <version>2.4.0</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-json</artifactId>
      <version>2.1.2</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-mongo</artifactId>
      <version>4.1.9</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-rs</artifactId>
      <version>3.5.1</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-rs-json</artifactId>
      <version>1.0.14</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-rs-streams</artifactId>
      <version>1.2.3</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-netty-http</artifactId>
      <version>3.1.5</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish</groupId>
      <artifactId>javax.json</artifactId>
      <version>1.1.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>2.0.13</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>2.23.1</version>
      <type>pom</type>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.13</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>false</autoReleaseAfterClose>
          <keepStagingRepositoryOnCloseRuleFailure>true
          </keepStagingRepositoryOnCloseRuleFailure>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>3.2.3</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.6.3</version>
        <configuration>
          <additionalJOptions>
            <additionalJOption>-J-Dhttp.agent=maven-javadoc-plugin-${project.name}
            </additionalJOption>
          </additionalJOptions>
          <links>
            <link>https://docs.oracle.com/en/java/javase/11/docs/api/</link>
            <link>https://www.javadoc.io/doc/net.pincette/pincette-common/latest/</link>
            <link>https://www.javadoc.io/doc/net.pincette/pincette-json/latest/</link>
            <link>https://www.javadoc.io/doc/net.pincette/pincette-mongo/latest/</link>
            <link>https://www.javadoc.io/doc/javax.json/javax.json-api/latest/</link>
          </links>
          <sourceFileExcludes>
            <sourceFileExclude>**/module-info.java</sourceFileExclude>
          </sourceFileExcludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <forkCount>0</forkCount>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.2.5</version>
      </plugin>
      <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
        <version>4.9.10</version>
        <executions>
          <execution>
            <id>get-the-git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>initialize</phase>
          </execution>
        </executions>
        <configuration>
          <generateGitPropertiesFile>true</generateGitPropertiesFile>
          <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
          </generateGitPropertiesFilename>
          <includeOnlyProperties>
            <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
            <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
          </includeOnlyProperties>
          <commitIdGenerationMode>full</commitIdGenerationMode>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
